--- a/Lab2/task2/CMakeLists.txt
+++ b/Lab2/task2/CMakeLists.txt
@@ -3,5 +3,7 @@ add_executable(task2
     main.cpp
     ImageFilters.cpp
     ImageFilters.h
+    "../include/myutils.cpp"
+    "../include/myutils.h"
 )
 target_link_libraries(task2 ${OpenCV_LIBS})
