--- a/Lab2/task2/CMakeLists.txt
+++ b/Lab2/task2/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Lab2 Task 2
 add_executable(task2
     main.cpp
-    ImageFilters.cpp
-    ImageFilters.h
+    "../include/ImageFilters.cpp"
+    "../include/ImageFilters.h"
     "../include/myutils.cpp"
     "../include/myutils.h"
 )
