--- a/Lab2/task1/CMakeLists.txt
+++ b/Lab2/task1/CMakeLists.txt
@@ -1,3 +1,7 @@
 # Lab2 Task 1
-add_executable(task1 main.cpp)
+add_executable(task1
+    main.cpp
+    "../include/myutils.cpp"
+    "../include/myutils.h"
+)
 target_link_libraries(task1 ${OpenCV_LIBS})
