--- a/Lab2/CMakeLists.txt
+++ b/Lab2/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 add_subdirectory(task1)
 add_subdirectory(task2)
 add_subdirectory(task3)
-#add_subdirectory(task4)
+add_subdirectory(task4)
 #add_subdirectory(task5)
 #add_subdirectory(task6)
 
