--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_subdirectory(task1)
-#add_subdirectory(task2)
+add_subdirectory(task2)
 #add_subdirectory(task3)
 #add_subdirectory(task4)
 #add_subdirectory(task5)
